--- a/package.json
+++ b/package.json
@@ -3,15 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
-    "@types/react": "^16.9.53",
-    "@types/react-dom": "^16.9.8",
+    "axios": "^0.21.0",
+    "bootstrap": "^4.5.3",
+    "igniteui-react-charts": "^16.13.0",
+    "igniteui-react-core": "^16.13.0",
+    "igniteui-react-grids": "16.13.0",
+    "igniteui-react-inputs": "16.13.0",
+    "igniteui-react-layouts": "16.13.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
+    "react-bootstrap-table-next": "^4.0.3",
+    "react-bootstrap-table2-paginator": "^2.1.2",
     "react-dom": "^17.0.1",
+    "react-js-pagination": "^3.0.3",
     "react-scripts": "4.0.1",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
@@ -39,5 +49,17 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/jquery": "^3.5.5",
+    "@types/react": "^16.14.2",
+    "@types/react-dom": "^16.9.10",
+    "dotenv": "^8.2.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^4.5.0",
+    "path": "^0.12.7",
+    "url-loader": "^4.1.1",
+    "webpack-cli": "^4.2.0",
+    "webpack-dev-server": "^3.11.0"
   }
 }
